# ashesinthedawn

./: .env.codette.example  .gitignore  ADVANCED_FEATURES_COMPLETE_20251202.md  ALL_FIXES_COMPLETE.md  ANALYSIS_COMPLETE_GUIDE.md  ANIMATION_PATTERNS.md  API_INTEGRATION_GUIDE.md  API_QUICK_REFERENCE.md  AUDIO_DEVICE_CONNECTION_FIX.md  AUDIO_DEVICE_IMPLEMENTATION_SUMMARY.md  AUDIO_METERING_INTEGRATION_20251202.md  AUDIO_METERING_QUICK_REFERENCE.md  BACKEND_FIXES_SUMMARY.md  BACKEND_SESSION_SUMMARY.md  BUILD_GUIDE.md  BUILD_SUMMARY.md  CHAT_RESPONSES_ANALYSIS.md  CHORUS_EFFECT_DOCUMENTATION.md  CLEANUP_SUMMARY.md  CMakePresets.json  CODETTE_ADVANCED_INTEGRATION.md  CODETTE_AI_INTEGRATION_FINAL_DEPLOYMENT_REPORT.md  CODETTE_AI_SYSTEM_AUDIT.md  CODETTE_COMPLETE_GUIDE.md  CODETTE_COMPLETE_SUMMARY.md  CODETTE_CONSOLIDATION_COMPLETE.md  CODETTE_CONTROL_CENTER_EXAMPLES.tsx  CODETTE_CONTROL_CENTER_INTEGRATION.tsx  CODETTE_DEBUG_GUIDE.md  CODETTE_DEPENDENCIES_INSTALLED.md  CODETTE_DEPLOYMENT_GUIDE.md  CODETTE_ENDPOINTS_AUDIT.md  CODETTE_ENHANCED_DELIVERY.md  CODETTE_ENHANCED_DELIVERY_CHECKLIST.md  CODETTE_ENHANCED_DELIVERY_FINAL.md  CODETTE_ENHANCED_REFERENCE.md  CODETTE_ENHANCEMENTS_COMPLETE.md  CODETTE_ENHANCEMENT_GUIDE.md  CODETTE_FILE_STRUCTURE.md  CODETTE_FINAL_CONSOLIDATION_COMPLETE.md  (+250 more)
Codette/: .env.example  00_START_HERE.txt  DEPLOYMENT_CHECKLIST.py  INDEX.md  INTEGRATION_COMPLETE.md  QUICK_START.md  README_CODETTE_INTEGRATION.md  WELCOME.txt  __init__.py  chat_with_codette.py  codansoulshell.py  codette_advanced.py  codette_api.py  codette_cli.py  codette_enhanced.py  demp  (+19 more)
(+722 files in other folders)
