[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codette"
version = "2.0.0"
authors = [
    { name = "Jonathan Harrison" },
]
description = "Advanced AI system with quantum computing integration, neural processing, and ethical governance"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "gradio>=3.40.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "vaderSentiment>=3.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3